--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
-    "react-spring": "^9.4.5-beta.1",
+    "react-spring": "^9.7.3",
+    "react-spring-3d-carousel": "^1.3.4",
     "reactstrap": "^9.0.1",
     "redux-logger": "^3.0.6",
     "typeface-lobster": "^1.1.13",
     "typeface-open-sans": "^1.1.13",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   }
 }
